--- a/src/index.html
+++ b/src/index.html
@@ -838,7 +838,7 @@
         }
         animateChart();
 
-        function connectWallet() {
+        function connectWallet(event) {
             const btn = event.target;
             btn.innerHTML = '⏳ Connecting...';
             
